assignments/module2-solution/CSS/datswagger.css
/** base styling **/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
header{
  padding: 20px;
  font-size: 175%;
  text-align: center;
  font-weight: bold;
  font-family: Arial;
}
h1, h2, h3{
  border: 1px solid black;
}
section{
  color: white;
  text-shadow: 1px 1px black;
  position: relative;
  margin: 10px;
  border: 1px solid black;
  padding: 10px;
  padding-top: 40px;
  text-align: center;
  font-family: Arial;
}


/*class and id specifications for font,positioning, etc*/
.sectionTitle{
  color: black;
  text-shadow: none;
  position: absolute;
  margin: 0px;
  padding: 3px 0px 3px 0px;
  width: 150px;
  top: -1px;
  right: -1px;
  background-color: #84e1e1; 
  font-size: 125%;
  font-weight: bold;
}
#p1 {
  background-color: #5c5c8a;
}
#p2 {
  background-color: #7575a3;
}
#p3 {
  background-color: #a3a3c2;
}


/* Simple Responsive Framework. */
.row {
  width: 100%;
}


/********** Desktop **********/
@media (min-width: 992px) {
  .col-lg-4{
    float: left;
  }
  .col-lg-4 {
    width: 33.33%;
  }
}


/********** Tablet **********/
@media (min-width: 768px) and (max-width: 991px) {
  .col-md-6, .col-md-12{
    float: left;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-12 {
    width: 100%;
  }
}


/********** Mobile **********/
@media (max-width: 767px) {
  .col-sm-12{
    float: left;
  }
  .col-sm-12 {
    width: 100%;
  }
}

